# aws-genai-llm-chatbot

./: .eslintignore  .eslintrc.cjs  .flake8  .gitallowed  .gitignore  .graphqlconfig.yml  .npmignore  .pip-audit-known-vulns  .prettierignore  NOTICE  README.fr.md  README.md  bandit.yaml  bedrock-agent-implementation-plan.md  buildspec.yml  cdk.json  config.js  config.json  config.ts  langchain_aws-0.2.2-py3-none-any.whl  out.tmp  package-lock.json  package.json  prettier.config.js  pyproject.toml  pytest_requirements.txt  tsconfig.json
.codecatalyst/workflows/: Workflow_81ec.yaml
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  deploy.yml  e2e-validation.yml  stale.yml
assets/: .$architecture.png.bkp
aws-genai-llm-chatbot/: README.md  capability.yaml  deployment.yaml  seedfarmer.yaml
aws-genai-llm-chatbot/assets/: example-input.yaml
chatbot-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
chatbot-ui/public/: index.html  manifest.json
chatbot-ui/src/: app.scss  app.tsx  index.tsx
cli/: aws-cron-expressions.ts  aws-cron-validator.ts  magic-config.ts  magic-create.js  magic-create.ts  magic.js  magic.ts  version.js  version.ts
docs/: index.md
docs/.vitepress/: config.mts
docs/about/: architecture.md  authors.md  aws-resources-deployed.md  features.md  license.md  welcome.md
docs/appsync/: appsync.md
docs/document-retrieval/: retriever.md
docs/documentation/: access-control.md  agentcore.md  applications.md  appsync.md  bedrock-agents.md  cf-geo-restriction.md  custom-public-domain.md  inference-script.md  model-requirements.md  monitoring.md  precautions.md  private-chatbot.md  retriever.md  sagemaker-schedule.md  security.md  self-hosted-models.md  user-permissions.md  vulnerability-scanning.md
docs/guide/: config.md  deploy.md  developers.md  getting-started.md  lipsum.md  lipsum2.md  prioritization.md  vulnerability-scanning.md
docs/sagemker-hosting/: inference-script.md
integtests/: conftest.py
integtests/chatbot-api/: agent_test.py  application_test.py  aurora_workspace_test.py  cross_encoder_test.py  embedding_test.py  genaieh_gateway_chat_test.py  kendra_workspace_test.py  media_generation_test.py  model_test.py  multi_modal_test.py  nexus_gateway_chat_test.py  opensearch_workspace_test.py  role_test.py  sagemaker_session_test.py  session_test.py  test_agent_conversation_flow.py  test_agents_integration.py
integtests/clients/: appsync_client.py  cognito_client.py  test_genaieh_client.py  test_nexus_client.py
integtests/security/: access_control_admin_test.py  access_control_user_test.py  access_control_workspace_manager_test.py  unauthorized_test.py  unauthorized_tet.py
lib/: aws-genai-llm-chatbot-stack.ts  chatbot-stack.ts  chatbot-ui-stack.ts  chatbot-vpc-stack.ts  utils.ts
lib/agents/: index.ts
lib/aurora-semantic-search/: aurora-semantic-search-stack.ts  document-indexing-stack.ts
lib/authentication/: index.ts
lib/chatbot-api/: appsync-ws.ts  index.ts  rest-api.ts  websocket-api.ts
lib/chatbot-backend/: chatbot-backend-stack.ts
lib/large-language-model/: container-images.ts  deploy-container-model.ts  deploy-custom-script-model.ts  deploy-package-model.ts  index.ts  types.ts
lib/layer/: index.ts
lib/llms/: index.ts
lib/models/: index.ts  sagemaker-schedule.ts
lib/monitoring/: index.ts
lib/rag-engines/: index.ts
lib/rag-sources/: index.ts  types.ts
lib/sagemaker-model/: README.md  container-images.ts  deploy-container-model.ts  deploy-custom-script-model.ts  deploy-package-model.ts  image-repository-mapping.ts  index.ts  types.ts
lib/semantic-search/: document-indexing-stack.ts  semantic-search-stack.ts
lib/shared/: file-import-dockerfile  index.ts  multi-dir-asset.ts  multi-folder-bundler.ts  shared-asset-bundler.ts  types.ts  utils.ts  web-crawler-dockerfile
lib/shared/layers/python-sdk/python/: pyproject.toml  sitecustomize.py
lib/shared/layers/python-sdk/python/genai_core/: __init__.py  admin_user_management.py  agents.py  applications.py  auth.py  boto_config.py  chunks.py  clients.py  cross_encoder.py  documents.py  embeddings.py  llms.py  models.py  parameters.py  presign.py  roles.py  rss.py  semantic_search.py  sessions.py  types.py  upload.py  user_feedback.py  workspaces.py
lib/shared/layers/python-sdk/python/genai_core/aurora/: __init__.py  chunks.py  connection.py  create.py  delete.py  query.py  utils.py
lib/shared/layers/python-sdk/python/genai_core/bedrock_agent/: __init__.py  client.py
lib/shared/layers/python-sdk/python/genai_core/bedrock_kb/: __init__.py  client.py  delete.py  indexes.py  query.py
lib/shared/layers/python-sdk/python/genai_core/kendra/: __init__.py  client.py  data_sync.py  delete.py  indexes.py  query.py
lib/shared/layers/python-sdk/python/genai_core/langchain/: __init__.py  chat_message_history.py  workspace_retriever.py
lib/shared/layers/python-sdk/python/genai_core/model_providers/: __init__.py  types.py
lib/shared/layers/python-sdk/python/genai_core/model_providers/direct/: embeddings.py  models.py  provider.py
lib/shared/layers/python-sdk/python/genai_core/model_providers/genaieh/: __init__.py  genaieh.py  genaieh_client.py  types.py
lib/shared/layers/python-sdk/python/genai_core/model_providers/nexus/: __init__.py  nexus.py  nexus_client.py  types.py
lib/shared/layers/python-sdk/python/genai_core/opensearch/: __init__.py  chunks.py  client.py  create.py  delete.py  query.py
lib/shared/layers/python-sdk/python/genai_core/registry/: index.py
lib/shared/layers/python-sdk/python/genai_core/utils/: appsync.py  comprehend.py  delete_files_with_object_key.py  delete_files_with_prefix.py  files.py  json.py  websocket.py
lib/shared/layers/python-sdk/python/genai_core/websites/: __init__.py  crawler.py  sitemap.py
lib/user-interface/: access-origin-control.ts  index.ts  private-website.ts  public-website.ts
lib/vpc/: index.ts
notebooks/: SELECT.pgsql  cross-encoder-tests.ipynb  script.md
scripts/: cloud9-resize.sh  tarball-size.sh  vend-prep.sh
tests/: cdk-app.test.ts  conftest.py
(+615 files in other folders)
