[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-core"
version = "0.1.0"
description = "Core Python SDK for AWS GenAI LLM Chatbot"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Amazon Web Services"}
]
dependencies = [
    # Core dependencies
    "boto3>=1.28.57",
    "botocore>=1.28.57",
    "aws-lambda-powertools>=2.25.1",
    "aws_xray_sdk>=2.14.0",
    
    # LangChain and related
    "langchain>=0.3.7",
    "langchain-core>=0.3.29",
    "langchain-aws>=0.2.10",
    "langchain-community>=0.3.3",
    "langchain-openai>=0.2.4",
    "langchain-text-splitters>=0.3.5",
    
    # Database and vector stores
    "opensearch-py>=2.3.1",
    "psycopg2-binary>=2.9.7",
    "pgvector>=0.2.2",
    
    # Data processing
    "numpy>=1.26.4",
    "pydantic>=2.9.2",
    
    # AWS authentication
    "cfnresponse>=1.1.2",
    "aws_requests_auth>=0.4.3",
    "requests-aws4auth>=1.2.3",
    
    # Web and parsing
    "urllib3==2.5.0",
    "beautifulsoup4>=4.12.2",
    "requests>=2.32.4",
    "attrs>=23.1.0",
    "feedparser>=6.0.11",
    "defusedxml>=0.7.1",
    "filetype>=1.2.0",
    
    # PDF processing
    "pdfplumber>=0.11.0",
    
    # AI models
    "openai>=0.28.0",
    
    # Authentication
    "PyJWT>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-mock>=3.10.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
]
